--- a/public/css/style.css
+++ b/public/css/style.css
@@ -230,12 +230,12 @@ header {
   flex-wrap: wrap;
 }
 .tablesChild {
-  flex: 1 0 21%; /* explanation below */
-  margin: 50px;
+  flex: 1 0 21%;
+  margin: 0px;
   height: 100px;
 }
 .tabsChild {
-  margin: 5px;
+  margin: 30px;
   height: 50px;
   padding-bottom: 3px;
   align-content: center;
