--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     />
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  
+    <script src="https://kit.fontawesome.com/5c22034e45.js" crossorigin="anonymous"></script>
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"
     ></script>
