--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -84,7 +84,7 @@
                           <h4><strong>Total:</strong></h4>
                         </td>
                         <td class="text-center text-danger">
-                          <h4><strong>$totalAmount</strong></h4>
+                          <h4><strong>$<span id="receiptTotal"></span></strong></h4>
                         </td>
                       </tr>
                     </tbody>
