--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -1,4 +1,3 @@
-
 <body class="landing-page">
     <div class="container">
         <div class="row d-flex">
@@ -6,7 +5,7 @@
                 <div class="row">
                     <!-- <div class=""> -->
                     <button type="button" class="btn btn-dark table-map">
-                        Table Map
+                        Table/Tabs Map
                     </button>
 
                     <button type="button" class="btn btn-dark tab-name">
@@ -25,11 +24,11 @@
                     {{#each menu-items}}
                     <tr>
                         <td>{{this.item_name}}</td>
-                        <td><button class="btn btn-default btn-subtract" type="button">-</button>x {{this.available}}<button
-                                class="btn btn-default btn-add" type="button">+</button></td>
+                        <td><button class="btn btn-default btn-subtract" type="button">-</button>x
+                            {{this.available}}<button class="btn btn-default btn-add" type="button">+</button></td>
                         <td>{{this.price}}</td>
                     </tr>
-                  {{/each}}
+                    {{/each}}
                 </table>
 
                 <div>
@@ -73,78 +72,78 @@
                     </div>
                 </div>
 
-              
-                <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
-                    <div id="menu-items" class="item-1">
-                        <img src=""
-                            alt="" class="images" />
-                        <p></p>
-                        <p></p>
+                <div class="flex-wrap">
+                    <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
+                        <div id="menu-items" class="item-1">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-2">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-3">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-4">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div class="d-flex justify-content-evenly col-md-12">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-6">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-7">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-8">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div class="d-flex justify-content-evenly col-md-12">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+                        <div id="menu-items" class="item-10">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+                        <div id="menu-items" class="item-11">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
+
+                        <div id="menu-items" class="item-12">
+                            <img src="" alt="" class="images" />
+                            <p></p>
+                            <p></p>
+                        </div>
                     </div>
-
-                    <div id="menu-items" class="item-2">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                        </div>
-
-                    <div id="menu-items" class="item-3">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-4">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                <div class="d-flex justify-content-evenly col-md-12">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                        </div>
-
-                    <div id="menu-items" class="item-6">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-7">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-8">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                <div class="d-flex justify-content-evenly col-md-12">
-                        <img src="" alt="" class="images" />
-                        <p></p>
-                        <p></p>
-                        </div>
-                    <div id="menu-items" class="item-10">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-                    <div id="menu-items" class="item-11">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-12">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
                 </div>
             </div>
         </div>
