--- a/views/userLogin.handlebars
+++ b/views/userLogin.handlebars
@@ -1,38 +1,39 @@
+{{> header}}
 <div id="uLogin-page">
-<section class="uLogin-bg gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem">
-          <div class="card-body p-5 text-center">
-            <div class="mt-md-4 pb-5">
-              <h2 class="fw-bold mb-2 text-uppercase">Employee Login</h2>
-              <p class="text-white-50 mb-5">
-                Please enter your login information
-              </p>
+  <section class="uLogin-bg gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem">
+            <div class="card-body p-5 text-center">
+              <div class="mt-md-4 pb-5">
+                <h2 class="fw-bold mb-2 text-uppercase">Employee Login</h2>
+                <p class="text-white-50 mb-5">
+                  Please enter your login information
+                </p>
 
-              <div class="form-outline form-white mb-4">
-                <input
-                  type="text"
-                  id="employeeLogin"
-                  class="form-control form-control-lg"
-                />
-                <label class="form-label" for="employeeLogin">Login ID</label>
+                <div class="form-outline form-white mb-4">
+                  <input
+                    type="text"
+                    id="employeeLogin"
+                    class="form-control form-control-lg"
+                  />
+                  <label class="form-label" for="employeeLogin">Login ID</label>
+                </div>
+
+                <button
+                  id="login"
+                  class="btn btn-outline-light btn-lg px-5"
+                  type="submit"
+                >
+                  Login
+                </button>
               </div>
-
-              <button
-                id="login"
-                class="btn btn-outline-light btn-lg px-5"
-                type="submit"
-              >
-                Login
-              </button>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 </div>
 <script src="../js/employeeLogin.js"></script>
