--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,3 +1,4 @@
+{{> header}}
 <section class="main container-fluid text-center">
   <div id="header_nav" class="row">
     <div class="col-2 btn nav-btn btn-secondary">Back</div>
