--- a/views/landingPage.handlebars
+++ b/views/landingPage.handlebars
@@ -1,4 +1,3 @@
-
 <body class="landing-page">
     <div class="container">
         <div class="row d-flex">
@@ -14,7 +13,7 @@
                     </button>
                 </div>
 
-                <p class="server-name">{{ticket.employee.name}}</p>
+                <p class="server-name">Server Name: {{ticket.employee.name}}</p>
 
                 <table class="nqp-table">
                     <tr>
@@ -73,11 +72,9 @@
                     </div>
                 </div>
 
-              
                 <div class="d-flex justify-content-evenly col-md-12 menu-row-1">
                     <div id="menu-items" class="item-1">
-                        <img src=""
-                            alt="" class="images" />
+                        <img src="" alt="" class="images" />
                         <p></p>
                         <p></p>
                     </div>
@@ -86,68 +83,68 @@
                         <img src="" alt="" class="images" />
                         <p></p>
                         <p></p>
-                        </div>
+                    </div>
 
                     <div id="menu-items" class="item-3">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
 
                     <div id="menu-items" class="item-4">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                <div class="d-flex justify-content-evenly col-md-12">
                         <img src="" alt="" class="images" />
                         <p></p>
                         <p></p>
-                        </div>
+                    </div>
+
+                    <div class="d-flex justify-content-evenly col-md-12">
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
 
                     <div id="menu-items" class="item-6">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-7">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                    <div id="menu-items" class="item-8">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
-
-                <div class="d-flex justify-content-evenly col-md-12">
                         <img src="" alt="" class="images" />
                         <p></p>
                         <p></p>
-                        </div>
+                    </div>
+
+                    <div id="menu-items" class="item-7">
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
+
+                    <div id="menu-items" class="item-8">
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
+
+                    <div class="d-flex justify-content-evenly col-md-12">
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
                     <div id="menu-items" class="item-10">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
                     <div id="menu-items" class="item-11">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
 
                     <div id="menu-items" class="item-12">
-                            <img src="" alt="" class="images" />
-                            <p></p>
-                            <p></p>
-                            </div>
+                        <img src="" alt="" class="images" />
+                        <p></p>
+                        <p></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
     <script src="/js/landingpage.js"></script>
-</section>
+    </section>
